[package]
name = "github-runner-kms-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
reqwest = {version = "0.12.15", features = ["blocking","json"]}
rocket = { version = "0.5", features = ["json"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
openssl = { version = "0.10", features = ["vendored"] }
